[gd_scene load_steps=22 format=3 uid="uid://bgoagfu32fh2c"]

[ext_resource type="Script" path="res://scripts/gooper/gooper_controller.gd" id="1_swe37"]
[ext_resource type="Texture2D" uid="uid://cx18nhv8q4uj7" path="res://assets/images/gooper/Gooper.png" id="2_uuqpu"]
[ext_resource type="Script" path="res://scripts/gooper/state_machine.gd" id="3_bliuf"]
[ext_resource type="Script" path="res://scripts/gooper/two_legs_state.gd" id="4_oqtl3"]
[ext_resource type="Script" path="res://scripts/gooper/one_leg_state.gd" id="5_y52cp"]
[ext_resource type="Script" path="res://scripts/gooper/no_legs_state.gd" id="6_yoyj0"]

[sub_resource type="Animation" id="Animation_w0ixl"]
resource_name = "Idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [2, 3, 4, 5, 6, 7, 8, 9]
}

[sub_resource type="Animation" id="Animation_22vbe"]
resource_name = "Jump"

[sub_resource type="Animation" id="Animation_ffreq"]
resource_name = "Kick"

[sub_resource type="Animation" id="Animation_fx573"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}

[sub_resource type="Animation" id="Animation_rcmtr"]
resource_name = "Run"

[sub_resource type="Animation" id="Animation_0hdfg"]
resource_name = "Walk"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_72nbl"]
_data = {
"Idle": SubResource("Animation_w0ixl"),
"Jump": SubResource("Animation_22vbe"),
"Kick": SubResource("Animation_ffreq"),
"RESET": SubResource("Animation_fx573"),
"Run": SubResource("Animation_rcmtr"),
"Walk": SubResource("Animation_0hdfg")
}

[sub_resource type="Animation" id="Animation_hsyct"]
resource_name = "Idle"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}

[sub_resource type="Animation" id="Animation_fuyvt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rkkuv"]
_data = {
"Idle": SubResource("Animation_hsyct"),
"RESET": SubResource("Animation_fuyvt")
}

[sub_resource type="Animation" id="Animation_0vil6"]
resource_name = "Idle"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [13]
}

[sub_resource type="Animation" id="Animation_jg8u2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [13]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_knq1c"]
_data = {
"Idle": SubResource("Animation_0vil6"),
"RESET": SubResource("Animation_jg8u2")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3r5aa"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wt6bt"]
size = Vector2(28, 53)

[node name="GooperController" type="CharacterBody2D" groups=["gooper"]]
script = ExtResource("1_swe37")

[node name="GooperSprite" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -7)
texture = ExtResource("2_uuqpu")
hframes = 8
vframes = 2
frame = 13

[node name="TwoLegsAnimator" type="AnimationPlayer" parent="GooperSprite"]
libraries = {
"": SubResource("AnimationLibrary_72nbl")
}

[node name="OneLegAnimator" type="AnimationPlayer" parent="GooperSprite"]
libraries = {
"": SubResource("AnimationLibrary_rkkuv")
}

[node name="NoLegsAnimator" type="AnimationPlayer" parent="GooperSprite"]
libraries = {
"": SubResource("AnimationLibrary_knq1c")
}

[node name="Audio" type="Node2D" parent="."]

[node name="Footsteps" type="AudioStreamPlayer2D" parent="Audio"]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_3r5aa")

[node name="PhysicalCollision" type="CollisionShape2D" parent="."]
position = Vector2(2, -1.5)
shape = SubResource("RectangleShape2D_wt6bt")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_bliuf")
initial_state = NodePath("two_legs_state")

[node name="two_legs_state" type="Node" parent="StateMachine" node_paths=PackedStringArray("TwoLegsAnimator")]
script = ExtResource("4_oqtl3")
TwoLegsAnimator = NodePath("../../GooperSprite/TwoLegsAnimator")

[node name="one_leg_state" type="Node" parent="StateMachine" node_paths=PackedStringArray("OneLegAnimator")]
script = ExtResource("5_y52cp")
OneLegAnimator = NodePath("../../GooperSprite/OneLegAnimator")

[node name="no_legs_state" type="Node" parent="StateMachine" node_paths=PackedStringArray("NoLegsAnimator")]
script = ExtResource("6_yoyj0")
NoLegsAnimator = NodePath("../../GooperSprite/NoLegsAnimator")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
